# semantic-extraction

./: README.md  analyze_format_comparison.py  analyze_predicate_patterns.py  analyze_relationship_differences.py  analyze_relationship_errors.py  check_dataset_splits.py  compare_all_experiments.py  dataset_utils.py  experiment_1_t5_baseline.py  experiment_2_langextract_poc.py  experiment_2_langextract_poc_batched.py  experiment_3_format_optimization_batched.py  experiment_4_backend_comparison.py  experiment_4b_improved_langextract.py  factual_metrics.py  find_complex_examples.py  improved_langextract_examples.py  inspect_dataset.py  pyproject.toml
